@@ -8,6 +8,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -19,49 +20,27 @@ import org.springframework.web.filter.OncePerRequestFilter;
 @Component
 public class JwtFilter extends OncePerRequestFilter {
 
-    private static final Logger LOGGER = Logger.getLogger(JwtFilter.class.getName());
-
     @Override
     protected void doFilterInternal(HttpServletRequest request,
                                     HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
-        String uri = request.getRequestURI();
-        String contextPath = request.getContextPath();
+        String header = request.getHeader("Authorization");
 
-        // Áp dụng JWT Filter cho các đường dẫn bắt đầu bằng /api/secure
-        if (uri.startsWith(contextPath + "/api/secure")) {
-            String header = request.getHeader("Authorization");
-
-            if (header == null || !header.startsWith("Bearer ")) {
-                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Thiếu hoặc sai định dạng Authorization header.");
-                return;
-            }
-
-            String token = header.substring(7); // Bỏ "Bearer "
+        if (header != null && header.startsWith("Bearer ")) {
+            String token = header.substring(7);
             try {
-                JwtUser user = JwtUtils.validateToken(token);
-
-                if (user != null) {
-                    UsernamePasswordAuthenticationToken authentication =
-                            new UsernamePasswordAuthenticationToken(
-                                    user.getUsername(),
-                                    null,
-                                    Collections.singletonList(new SimpleGrantedAuthority(user.getRole()))
-                            );
-
-                    SecurityContextHolder.getContext().setAuthentication(authentication);
-                    filterChain.doFilter(request, response);
-                    return;
+                String username = JwtUtils.validateTokenAndGetUsername(token);
+                if (username != null) {
+                    UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(username, null, List.of()); // Authorities nếu có
+                    SecurityContextHolder.getContext().setAuthentication(auth);
                 }
-
             } catch (Exception e) {
-                LOGGER.log(Level.SEVERE, "Xác thực token thất bại", e);
-                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Token không hợp lệ hoặc đã hết hạn.");
+                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Token không hợp lệ hoặc hết hạn");
                 return;
             }
         }
 
-        // Nếu không nằm trong /api/secure => tiếp tục filter như bình thường
         filterChain.doFilter(request, response);
     }
 }
